Fix WCAG contrast for navigation color

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #0B4F6C;
-    --secondary-color: #0096C7;
+    --secondary-color: #005f87;
     --accent1-color: #FBFBFF;
     --accent2-color: #444444;
 
